--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -32,7 +32,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.1.0 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-14T15:57:43.123Z" user="admin">14/07/2022 15:57:43</note>
+                                <note type="lastUpdated" date-time="2022-07-19T17:17:05.873Z" user="admin">19/07/2022 17:17:05</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -120,6 +120,7 @@
                             <note type="updated" update="translation-status" value="1" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">1</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-14T14:05:25.868Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-14T15:57:39.185Z" user="martina-cotter">Updated error with straight apostrophes.</note>
+                            <note type="updated" update="text-version" value="1.1.0" date-time="2022-07-19T17:17:02.048Z" user="john">Pararaphs in intro added and modified, plus some other minor edits and extra bibliography entries.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -192,46 +193,77 @@ Notes
                                                 prophesying the queen’s eventual awakening to
                                                 buddhahood. </p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-7"/>
-                                        <p tid="11">Two times in this sūtra, Queen Kṣemavatī aspires
-                                                to be reborn as a man so that she may progress on
-                                                her path to awakening. It may be jarring to some
-                                                readers to hear the queen lamenting her womanhood,
-                                                but this is not uncommon in Mahāyāna writings. In
-                                                her book <title xml:lang="en">Women in
-                                                  Buddhism</title>, Diana Paul identifies three ways
-                                                that Mahāyāna sūtras deal with the question of
-                                                female buddhahood: some deny the possibility of
-                                                buddhahood in a female body, some accept women as “lower-stage” bodhisattvas, and some grant women the
-                                                potential for being “advanced” bodhisattvas whose buddhahood is “imminent.”<note place="end" xml:id="UT22084-061-012-8">Paul 1979, p.
-                                                  169</note> With its assertion that Queen Kṣemavatī
-                                                must be reborn as a man in order to continue her
-                                                spiritual development, <title xml:lang="en">The
-                                                  Prophecy of Kṣemavatī</title> fits into this first
-                                                category. Despite this assertion of the inadequacy
-                                                of the female form, the sūtra is framed as an
-                                                inspiration to women, as it ends with many thousands
-                                                of women developing the intent to reach
-                                                buddhahood.</p>
+                                        <p tid="66">Kṣemavatī is mentioned in at least one other 
+                                                sūtra in the Kangyur<note place="end" xml:id="UT22084-061-012-102">See 
+                                                        <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/UT22084-055-005.html#UT22084-055-005-138">The
+                                                        Absorption of the Thus-Gone One’s Wisdom Seal</ref>
+                            </title> (<title xml:lang="Sa-Ltn">Tathāgata-jñāna-mudrā-samādhi</title>, 
+                                                        Toh 131).</note> as one of Bimbisāra’s queens. She may well represent the same person as the Khemā who appears in the Pali literature  
+                                                as Bimbisāra’s consort, at first infatuated by her own beauty but later, on meeting the Buddha, becoming an arhat and 
+                                                bhikṣuṇī.<note place="end" xml:id="UT22084-061-012-103">See Malalasekera 1937.</note> Here, however, she is described as a bodhisattva
+                                                who has already embarked on accumulating merit on the initial stage of her “natural career” (<foreign xml:lang="Sa-Ltn">prakṛti­caryā</foreign>) 
+                                                and has vowed to attain awakening on the subsequent stage of her “resolution” (<foreign xml:lang="Sa-Ltn">praṇidhāna­caryā</foreign>), as mentioned in
+                                                <ptr target="#UT22084-061-012-24"/>. In the present narrative she reinforces her previous vow and receives her “prophecy” (<foreign xml:lang="Sa-Ltn">vyākaraṇa</foreign>)
+                                                of future buddhahood from the Buddha himself.<note place="end" xml:id="UT22084-061-012-105">For a brief summary of these stages in 
+                                                        a bodhisattva’s career as set out in the <title xml:lang="Sa-Ltn">Mahā­vastu</title>, see the introduction to
+                                                        <title xml:lang="en">The Good Eon</title> (<title xml:lang="Sa-Ltn">Bhadra­kalpika</title>, 
+                                                        Toh 94), <ref target="https://read.84000.co/translation/toh94.html#UT22084-045-001-14621">i.11</ref> and 
+                                                        <ref target="https://read.84000.co/translation/toh94.html#UT22084-045-001-14622">n.6</ref>.</note> </p>
+                                        <milestone unit="chunk" xml:id="UT22084-061-012-106"/>
+                                        <p tid="67">Twice in this sūtra, Queen Kṣemavatī aspires to be reborn as a man so that she may progress on
+                                                her path to awakening. It may be jarring to readers to hear the queen lamenting her womanhood,
+                                                but this is not uncommon in Mahāyāna works. Other Kangyur sūtras feature women bodhisattvas who are also queens or princesses and who, like Kṣemavatī, receive their predictions of future awakening: <title xml:lang="en">The Sūtra of Aśokadattā’s
+                                                        Prophecy</title> (Toh 76),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh76.html"/> 
+                                                <title xml:lang="en">The Questions of Vimalaprabhā</title> (Toh 168),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh168.html"/>
+                                                <title xml:lang="en">The Questions of the Girl Vimalaśraddhā</title> (Toh 84),<note place="end" xml:id="UT22084-061-012-107">See Karma Gyaltsen Ling Translation Group, trans., 
+                                                        <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh84.html">The Questions of the Girl Vimalaśraddhā</ref>
+                            </title> (Toh 84), 2021.</note>
+                                                <title xml:lang="en">The Questions of Vimaladattā</title> (Toh 77),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh77.html"/> 
+                                                and <title xml:lang="en">The Lion’s Roar of Śrīmālādevī</title> (Toh 92)<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh92.html"/>. 
+                                                Less privileged laywomen are the main interlocutors in <title xml:lang="en">The Questions of the Girl
+                                                        Sumati</title> (Toh 74),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh74.html"/> <title xml:lang="en">The Questions of Gaṅgottara</title> (Toh 75),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh75.html"/>
+                                                <title xml:lang="en">The Questions of an Old Lady</title> (Toh 171),<note place="end" xml:id="UT22084-061-012-108">See Sakya Pandita Translation Group (International Buddhist Academy Division), trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh171.html">The Questions of an Old Lady</ref>
+                            </title> (Toh 171), 2011.</note> <title xml:lang="en">The Miraculous Play
+                                                        of Mañjuśrī</title> (Toh 96),<note place="end" xml:id="UT22084-061-012-109">See Jens Erland Braarvig, trans., 
+                                                                <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh96.html">The Miraculous Play of Mañjuśrī</ref>
+                            </title> (Toh 96), 2020.</note> 
+                                                <title xml:lang="en">The Sūtra of the Girl Candrottarā’s Prophecy</title> 
+                                                (Toh 191),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh191.html"/> and, notably, 
+                                                <title xml:lang="en">The Prophecy Concerning Strīvivarta</title> (Toh 190).<note place="end" xml:id="UT22084-061-012-110">See Dharmachakra Translation Committee, trans., 
+                                                        <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh190.html">The Prophecy Concerning Strīvivarta</ref>
+                            </title> (Toh 190), 2021.</note>
+                                                In some of these sūtras gender is dismissed as irrelevant or merely notional, yet these accounts in all cases—even those of Strīvivarta and Vimalaprabhā, the most advanced 
+                                                bodhisattvas in their abilities to manifest in different forms—consistently seem to culminate in the prediction that the female protagonist will ultimately become male, at least for the final 
+                                                stages of the path to buddhahood.<note place="end" xml:id="UT22084-061-012-8">In her book <title xml:lang="en">Women in
+                                                  Buddhism</title> (p. 169) Diana Paul identifies three ways in which Mahāyāna sūtras deal with the question of
+                                                female buddhahood. Most deny the possibility of buddhahood in a female body, some accept that women may be “lower-stage” bodhisattvas, and some 
+                                                that they may potentially be “advanced” bodhisattvas whose buddhahood is “imminent.”</note> This sūtra, like the others mentioned, 
+                                                even while imposing the traditional stance of male primacy, is nevertheless framed as an inspiration to women, and ends with many thousands
+                                                of women developing the intent to reach buddhahood.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-9"/>
                                         <p tid="12">While the text does not include a colophon that
-                                                identifies its translators, we have some information
-                                                about its history. <title xml:lang="en">The Prophecy
+                                                identifies its translators, <title xml:lang="en">The Prophecy
                                                   of Kṣemavatī</title> is listed in the earliest
                                                 Tibetan textual catalog, the Denkarma, so we can say
                                                 with certainty that it appeared in Tibet at some
                                                 point during or before the early ninth century <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-061-012-10"> See Denkarma, folio
                                                   299.b and Herrmann-Pfandt, p. 119.</note> Despite
-                                                this early arrival, it does not appear that <title xml:lang="en">The Prophecy of Kṣemavatī</title>
-                                                was the subject of any scholarly attention in Tibet.
-                                                It was translated into Chinese (Taishō 573, <title xml:lang="Zh-Ltn">cha mo po di shou chi
+                                                being among the main body of sūtras translated in the early period, <title xml:lang="en">The Prophecy of Kṣemavatī</title> does not seem to have been 
+                                                the subject of any scholarly attention in Tibet.
+                                                It was translated into Chinese (Taishō 573, <title xml:lang="Zh-Ltn">Chamopo di shouji
                                                   jing</title>, <title xml:lang="zh">差摩婆帝授記經</title>) in the year 525 <hi rend="small-caps">ce</hi> by the Indian monk
                                                 Bodhiruci, who translated some thirty-nine Buddhist
                                                 texts in the early sixth century. <title xml:lang="en">The Prophecy of Kṣemavatī</title>
                                                 was translated into Mongolian and Korean and is
                                                 included in the Buddhist canons in those languages.
-                                                This text was also translated into French in 1866 by
+                                                It was translated into French in 1866 by
                                                 Henri Léon Feer as part of his collection of Kangyur
-                                                excerpts, and by Peter Skilling in 2021.</p>
+                                                excerpts, and an English translation by Peter Skilling was published in 2021.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-11"/>
                                         <p tid="13">The English translation presented here was
                                                 prepared based on the Degé Kangyur
@@ -398,7 +430,7 @@ Notes
                                                 do all of your qualities come from? And,
                                                 furthermore, where do the unfathomable,
                                                 inconceivable, immeasurable, ineffable, incalculable
-                                                teachings of the Buddha come from?”</p>
+                                                qualities of the Buddha come from?”</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-32"/>
                                         <p tid="37">The Blessed One answered Queen Kṣemavatī with
                                                 these verses:</p>
@@ -442,9 +474,8 @@ Notes
                                         <lg tid="43">
                                                 <l>“I surpassed the many-formed Maheśvara,</l>
                                                 <l>And even Brahmā himself.</l>
-                                                <l>I have realized the qualities</l>
-                                                <l>Of the inconceivable teachings of the
-                                                        Buddha.”</l>
+                                                <l>I realized the characteristics</l>
+                                                <l>Of the inconceivable features of buddhahood.”</l>
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-39"/>
                                         <p tid="44">After hearing of the qualities of the Blessed
@@ -644,6 +675,8 @@ Notes
                                                   buddhistischen Texte. Vienna: Verlag der
                                                   Österreichischen Akademie der
                                                   Wissenschaften</title>, 2008.</bibl>
+                                        <bibl xml:id="UT22084-061-012-104">Malalasekera, G.P. <title xml:lang="en">Dictionary of Pāli Proper Names</title>. 2 vols. London: Pali Text
+                                                Society, 1937.</bibl>
                                         <bibl xml:id="UT22084-061-012-70">Monier-Williams, M. <title xml:lang="en">A Sanskrit-English
                                                   Dictionary</title>. Oxford: Clarendon Press,
                                                 1899.</bibl>
