--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -6,9 +6,9 @@
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">The Prophecy of
                                         Kṣemavatī</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­kṣemavatī­vyākaraṇa­</title>
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Kṣemavatī­vyākaraṇa­</title>
                                 <title type="mainTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ།</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa bde ldan ma lung
+                                <title type="mainTitle" xml:lang="Bo-Ltn">bde ldan ma lung
                                         bstan pa</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
                                         Prophecy of Kṣemavatī”</title>
@@ -32,7 +32,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.1 <date>2022</date>
+                <edition>v 1.1.2 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-19T17:45:28.133Z" user="admin">19/07/2022 17:45:28</note>
+                                <note type="lastUpdated" date-time="2022-07-19T19:55:40.794Z" user="admin">19/07/2022 19:55:40</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -122,6 +122,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-14T15:57:39.185Z" user="martina-cotter">Updated error with straight apostrophes.</note>
                             <note type="updated" update="text-version" value="1.1.0" date-time="2022-07-19T17:17:02.048Z" user="john">Pararaphs in intro added and modified, plus some other minor edits and extra bibliography entries.</note>
                             <note type="updated" update="text-version" value="1.1.1" date-time="2022-07-19T17:45:24.298Z" user="john">Further changes and bibliograph entries.</note>
+                            <note type="updated" update="text-version" value="1.1.2" date-time="2022-07-19T19:55:36.981Z" user="john">Further improvements.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -213,8 +214,14 @@ Notes
                                                         <ref target="https://read.84000.co/translation/toh94.html#UT22084-045-001-14622">n.6</ref>.</note> </p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-106"/>
                                         <p tid="67">Twice in this sūtra, Queen Kṣemavatī aspires to be reborn as a man so that she may progress on
-                                                her path to awakening. It may be jarring to readers to hear the queen lamenting her womanhood,
-                                                but this is not uncommon in Mahāyāna works. Other Kangyur sūtras feature women bodhisattvas who are also queens or princesses and who, like Kṣemavatī, receive their predictions of future awakening: <title xml:lang="en">The Sūtra of Aśokadattā’s
+                                                her path to awakening. It may be jarring to modern readers to hear the queen lamenting her womanhood,
+                                                but such attitudes are not uncommon in Mahāyāna sūtras, in many of which it seems to be assumed without question 
+                                                that not only buddhas but bodhisattvas, too, are exclusively male.<note place="end" xml:id="UT22084-061-012-8">In her book <title xml:lang="en">Women in
+                                                  Buddhism</title> (p. 169) Diana Paul identifies three ways in which Mahāyāna sūtras deal with the question of
+                                                female buddhahood. While most deny the possibility of buddhahood in a female body, some implicitly deny that women can be bodhisattvas at all, some accept that women may be “lower-stage” bodhisattvas, and some 
+                                                that women may potentially be “advanced” bodhisattvas whose buddhahood is “imminent.”</note> This sūtra, in which the focus is on a bodhisattva who is a woman, 
+                                                can therefore be seen as belonging to a distinct genre of texts that counter such assumptions. The genre includes other Kangyur sūtras 
+                                                featuring women bodhisattvas who are also queens or princesses and who, like Kṣemavatī, receive their predictions of future awakening, such as <title xml:lang="en">The Sūtra of Aśokadattā’s
                                                         Prophecy</title> (Toh 76),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh76.html"/> 
                                                 <title xml:lang="en">The Questions of Vimalaprabhā</title> (Toh 168),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh168.html"/>
                                                 <title xml:lang="en">The Questions of the Girl Vimalaśraddhā</title> (Toh 84),<note place="end" xml:id="UT22084-061-012-107">See Karma Gyaltsen Ling Translation Group, trans., 
@@ -222,8 +229,8 @@ Notes
                                 <ref target="https://read.84000.co/translation/toh84.html">The Questions of the Girl Vimalaśraddhā</ref>
                             </title> (Toh 84), 2021.</note>
                                                 <title xml:lang="en">The Questions of Vimaladattā</title> (Toh 77),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh77.html"/> 
-                                                and <title xml:lang="en">The Lion’s Roar of Śrīmālādevī</title> (Toh 92)<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh92.html"/>. 
-                                                Less privileged laywomen are the main interlocutors in <title xml:lang="en">The Questions of the Girl
+                                                and <title xml:lang="en">The Lion’s Roar of Śrīmālādevī</title> (Toh 92)<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh92.html"/>, 
+                                                as well as those in which nonroyal laywomen are the main interlocutors, like <title xml:lang="en">The Questions of the Girl
                                                         Sumati</title> (Toh 74),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh74.html"/> <title xml:lang="en">The Questions of Gaṅgottara</title> (Toh 75),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh75.html"/>
                                                 <title xml:lang="en">The Questions of an Old Lady</title> (Toh 171),<note place="end" xml:id="UT22084-061-012-108">See Sakya Pandita Translation Group (International Buddhist Academy Division), trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh171.html">The Questions of an Old Lady</ref>
@@ -240,12 +247,13 @@ Notes
                             </title> (Toh 190), 2021.</note>
                                                 In some of these sūtras gender is dismissed as irrelevant or merely notional, yet these accounts in all cases—even those of Strīvivarta and Vimalaprabhā, the most advanced 
                                                 bodhisattvas in their abilities to manifest in different forms—consistently seem to culminate in the prediction that the female protagonist will ultimately become male, at least for the final 
-                                                stages of the path to buddhahood.<note place="end" xml:id="UT22084-061-012-8">In her book <title xml:lang="en">Women in
-                                                  Buddhism</title> (p. 169) Diana Paul identifies three ways in which Mahāyāna sūtras deal with the question of
-                                                female buddhahood. Most deny the possibility of buddhahood in a female body, some accept that women may be “lower-stage” bodhisattvas, and some 
-                                                that they may potentially be “advanced” bodhisattvas whose buddhahood is “imminent.”</note> This sūtra, like the others mentioned, 
-                                                even while imposing the traditional stance of male primacy, is nevertheless framed as an inspiration to women, and ends with many thousands
-                                                of women developing the intent to reach buddhahood.</p>
+                                                stages of the path to buddhahood.<note place="end" xml:id="UT22084-061-012-116">A notable exception to the seeming inevitability of such an outcome can be seen in the <title xml:lang="Sa-Ltn">Gaṇḍavyūha</title> (see Roberts, Peter (trans.), 
+                                                        <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh44-45.html">The Stem Array</ref>
+                            </title>, Toh 44, chapter 45, 2022) in which advanced female teachers appear 
+                                                        with no mention of their eventual need to become male.</note> So while this sūtra, like the others mentioned, 
+                                                imposes the traditional stance of male primacy, it is perhaps in countering texts that make no mention of women bodhisattvas at all that it is framed as an inspiration to women, 
+                                                and ends with many thousands of women developing the intent to reach buddhahood.</p>
                                         <milestone unit="chunk" xml:id="UT22084-061-012-9"/>
                                         <p tid="12">While the text does not include a colophon that
                                                 identifies its translators, <title xml:lang="en">The Prophecy
