--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -7,7 +7,7 @@
                                 <title type="mainTitle" xml:lang="en">The Prophecy of
                                         Kṣemavatī</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Kṣemavatī­vyākaraṇa­</title>
-                                <title type="mainTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ།</title>
+                                <title type="mainTitle" xml:lang="bo">བདེ་ལྡན་མ་ལུང་བསྟན་པ།</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">bde ldan ma lung
                                         bstan pa</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
@@ -32,7 +32,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.4 <date>2022</date>
+                <edition>v 1.1.5 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-21T10:38:20.154Z" user="admin">21/07/2022 10:38:20</note>
+                                <note type="lastUpdated" date-time="2022-07-21T10:45:28.75Z" user="admin">21/07/2022 10:45:28</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -125,6 +125,7 @@
                             <note type="updated" update="text-version" value="1.1.2" date-time="2022-07-19T19:55:36.981Z" user="john">Further improvements.</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2022-07-20T11:06:03.382Z" user="john">Further changes, order, and format changes.</note>
                             <note type="updated" update="text-version" value="1.1.4" date-time="2022-07-21T10:38:16.27Z" user="john">Further small edits suggested by Nate. </note>
+                            <note type="updated" update="text-version" value="1.1.5" date-time="2022-07-21T10:45:24.883Z" user="john">'phags pa removed from short title.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -156,8 +157,8 @@ Notes
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT22084-061-012-2"/>
                                 <p tid="4">Translated by the Subhashita Translation Group. The
-                                        translation was produced by Benjamin Ewing, who also wrote
-                                        the introduction. Lowell Cook checked the translation
+                                        translation was produced by Benjamin Ewing, who also contributed to
+                                        the introduction (later completed by the 84000 editors). Lowell Cook checked the translation
                                         against the Tibetan and edited the text. </p>
                                 <milestone unit="chunk" xml:id="UT22084-061-012-3"/>
                                 <p tid="5">The translation was completed under the patronage and
