--- a/translations/kangyur/placeholders/064-005_toh235,657,1063-the_great_cloud.xml
+++ b/translations/kangyur/placeholders/064-005_toh235,657,1063-the_great_cloud.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2019</date>
+                <edition>v 0.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-064-005"/>
                 <date/>
             </publicationStmt>
@@ -55,7 +55,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T09:57:17.418Z" user="admin">19/05/2022 09:57:17</note>
+                <note type="lastUpdated" date-time="2022-07-23T13:23:51.487Z" user="admin">23/07/2022 13:23:51</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2020-09-03T09:47:34.283Z" user="line-tofte">2.h</note>
@@ -66,7 +66,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-05T09:46:59.701Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-16T12:02:28.144Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.f" date-time="2021-09-28T07:37:01.796Z" user="line-tofte">2.f</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T07:37:01.796Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-03-23T14:05:28.161Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-03-23T14:05:28.161Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-03-23T14:05:56.785Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-19T09:57:09.822Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-19T09:57:09.822Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T07:37:01.796Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-03-23T14:05:28.161Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-03-23T14:05:28.161Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-03-23T14:05:56.785Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-19T09:57:09.822Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-19T09:57:09.822Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.a" date-time="2022-07-23T13:23:43.802Z" user="martina-cotter">2.a</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-23T13:23:43.802Z" user="martina-cotter">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
