--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-10T18:32:06.164Z" user="admin">10/07/2022 18:32:06</note>
+                <note type="lastUpdated" date-time="2022-07-25T15:40:57.828Z" user="admin">25/07/2022 15:40:57</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:11:33.474Z" user="mike">2.d</note>
@@ -124,7 +124,7 @@
     <note type="updated" update="text-version" value="1.0.1" date-time="2021-04-09T14:42:49.896Z" user="john">Superfluous English mentions in Chinese fields of the glossary removed.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-09T15:05:23.628Z" user="john">Added a sentence to Introduction.</note>
     <note type="updated" update="text-version" value="1.0.3" date-time="2021-04-20T10:18:59.048Z" user="john">Removed mention in summary of n longer being reborn as a female.</note>
-    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-10T18:32:02.374Z" user="john">Harmonization of trailer and colophon</note>
+    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-10T18:32:02.374Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-25T15:40:53.95Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -214,9 +214,10 @@
                             <ref rend="pending" target="https://read.84000.co/translation/toh168.html">Vimala­prabhā­paripṛcchā</ref>
                         </title> (Toh 168, in the General Sūtra section). King Bimbisāra’s queen, 
                         Kṣemavatī, questions the Buddha about his qualities and receives her prediction in the 
-                        <title xml:lang="Sa-Ltn">
-                            <ref rend="pending" target="https://read.84000.co/translation/toh192.html">Kṣemavatī­vyākaraṇa</ref>
-                        </title> (Toh 192). Less privileged female bodhisattvas include laywomen, 
+                        <title xml:lang="Sa-Ltn">Kṣemavatī­vyākaraṇa</title> (Toh 192).<note place="end" xml:id="UT22084-044-004-372">See  Subhashita Translation Group, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh192.html">The Prophecy of Kṣemavatī</ref>
+                            </title>, Toh 192 (84000: Translating the Words of the Buddha, 2022).</note> 
+                        Less privileged female bodhisattvas include laywomen, 
                         the main interlocutors in the <title xml:lang="Sa-Ltn">
                             <ref rend="pending" target="https://read.84000.co/translation/toh75.html">Gaṅgottarā­paripṛcchā</ref>
                         </title> (Toh 75), the 
@@ -1466,6 +1467,9 @@
                         2011.</bibl>
                     <!--<bibl xml:id="UT22084-044-004-272">Ṭhānissaro Bhikkhu. <title xml:lang="en"><ref target="https://www.dhammatalks.org/ebook_index.html#/Archive/Writings/Ebooks/BMC1&2_200826.epub">The Buddhist Monastic Code</ref></title>/title>. dhammatalks.org,
                         2020 (free eBook).</bibl>-->
+                    <bibl xml:id="UT22084-044-004-371">Subhashita Translation Group, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh192.html">The Prophecy of Kṣemavatī</ref>
+                        </title> (Toh 192). 84000: Translating the Words of the Buddha, 2022.</bibl>
                 </div>
 
             </div>
