--- a/translations/kangyur/placeholders/050-001_toh110-the_sutra_of_the_dense_array.xml
+++ b/translations/kangyur/placeholders/050-001_toh110-the_sutra_of_the_dense_array.xml
@@ -20,7 +20,7 @@
                 <sponsor ref="sponsors.xml#sponsor-49">Liu Xiao Lei</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,13 +40,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T04:24:20.287Z" user="admin">26/07/2022 04:24:20</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:25:03.294Z" user="admin">26/07/2022 04:25:03</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-15T09:48:28.379Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-15T09:49:12.966Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-15T09:51:10.142Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-15T09:52:22.526Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T04:24:12.596Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T04:24:57.443Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
