--- a/translations/kangyur/placeholders/050-002_toh111-the_white_lotus_of_great_compassion.xml
+++ b/translations/kangyur/placeholders/050-002_toh111-the_white_lotus_of_great_compassion.xml
@@ -4,20 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">snying rje chen po pad+ma dkar po'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahākaruṇāpuṇḍarīkasūtra</title>
                 <title type="mainTitle" xml:lang="en">The White Lotus of Great Compassion</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa snying rje chen po'i pad+ma dkar po zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahākaruṇāpuṇḍarīkasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">snying rje chen po pad+ma dkar po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahākaruṇā­puṇḍarīka­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">大悲白蓮經  · (大正藏：大悲經)</title>
-<author role="translatorMain" ref="contributors.xml#team-9"/>
-            <author role="translatorEng" ref="contributors.xml#person-78">Zachary Beer</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa snying rje chen po'i pad+ma dkar po zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《大悲白蓮經》 (大正藏：大悲經)</title>
+                <author role="translatorMain" ref="contributors.xml#team-9"/>
+                <author role="translatorEng" ref="contributors.xml#person-78">Zachary Beer</author>
                 <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-<sponsor ref="sponsors.xml#sponsor-196">Zhou Wen Dong, Zhou De Jia</sponsor>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <sponsor ref="sponsors.xml#sponsor-196">Zhou Wen Dong, Zhou De Jia</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -38,9 +38,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:10:59.366Z" user="admin">30/04/2020 08:10:59</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T13:23:55.05Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:26:20.614Z" user="admin">26/07/2022 04:26:20</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T13:23:55.05Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T04:26:12.928Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
