--- a/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -8,9 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">karuṇāpuṇḍarīkasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">snying rje pad+ma dkar po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryakaruṇāpuṇḍarīka­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：悲華經）</title>
+                <title type="otherTitle" xml:lang="zh">《悲白蓮經》（大正藏：悲華經） </title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa snying rje pad+ma dkar po zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="zh">悲白蓮經</title>
                 <author role="translatorMain" ref="eft:team-22">Dr Peter Alan Robert</author>
                 <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
                 <consultant role="dharmaMaster" ref="eft:person-145">Tulku Yeshi Gyatso</consultant>
@@ -24,7 +23,7 @@
                 <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -44,15 +43,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-15T12:56:33.096Z" user="admin">15/06/2022 12:56:33</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T09:10:53.501Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.3" date-time="2021-09-13T07:37:20.98Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.4" date-time="2021-09-13T07:37:39.643Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.5" date-time="2021-09-13T07:39:53.016Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.1.6" date-time="2022-04-28T10:03:10.646Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.1.7" date-time="2022-04-28T10:05:08.219Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.1.8" date-time="2022-06-15T12:56:27.388Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T04:27:31.476Z" user="admin">26/07/2022 04:27:31</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T09:10:53.501Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-09-13T07:37:20.98Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2021-09-13T07:37:39.643Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2021-09-13T07:39:53.016Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2022-04-28T10:03:10.646Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2022-04-28T10:05:08.219Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2022-06-15T12:56:27.388Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2022-07-26T04:27:23.723Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
